# Bulbit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
.github/workflows/: cmake-build-sample.yml  cmake-build.yml  cmake-multi-platform.yml
cli/: CMakeLists.txt  light_builder.cpp  light_builder.h  main.cpp  material_builder.cpp  material_builder.h  model_loader.cpp  model_loader.h  primitive_builder.cpp  primitive_builder.h  samples.h  scene_builder.cpp  scene_builder.h  scene_loader.cpp  texture_builder.cpp  texture_builder.h
cli/scene/: cloth_test.cpp  cornell_box.cpp  cornell_box_caustics.cpp  cornell_box_cloud.cpp  cornell_box_fog.cpp  cornell_box_laser.cpp  cornell_box_volume.cpp  furnace_test.cpp  furnace_test2.cpp  head.cpp  many_lights.cpp  material_test.cpp  metals.cpp  nano_vdb_test.cpp  principled_test.cpp  rtow.cpp  sds_test.cpp  sss_test.cpp
include/bulbit/: aabb.h  (+120 more)
res/: .gitignore  cloth.glb  panzee.fbx  readme.txt  untitled.fbx
sample/: CMakeLists.txt  color_util.h  light_builder.cpp  light_builder.h  loader.cpp  loader.h  main.cpp  material_builder.cpp  material_builder.h  mistuba_loader.cpp  mitsuba_loader.cpp  mitsuba_loader.h  model_loader.cpp  model_loader.h  samples.h  scene_builder.cpp  scene_builder.h  scene_loader.cpp  scene_loader.h  string_util.h  texture_builder.cpp  texture_builder.h  util.h
sample/scene/: bistro_scene.cpp  brdf_sampling_test.cpp  breakfast_room.cpp  bvh_test.cpp  camera_scene.cpp  cloth_test.cpp  cornell_box lucy.cpp  cornell_box original.cpp  cornell_box volume.cpp  cornell_box.cpp  cornell_box_bunny_volume.cpp  cornell_box_caustics.cpp  cornell_box_fog.cpp  cornell_box_fog2.cpp  cornell_box_glossy.cpp  cornell_box_lucy.cpp  cornell_box_volume.cpp  cornell_box_volume2.cpp  cornell_box_volume_2.cpp  environment_map.cpp  furnace_test.cpp  furnace_test2.cpp  ggxvndf_sampling_test.cpp  head.cpp  material_test.cpp  metals.cpp  mis_test.cpp  normal_mapping_test.cpp  pbr_test.cpp  principled.cpp  principled_test.cpp  random_scene.cpp  reboot_scene.cpp  rtow.cpp  rtow_scene.cpp  san_miguel.cpp  ship_scene.cpp  sponza.cpp  sss_test.cpp  sss_test_2.cpp  (+5 more)
src/: CMakeLists.txt  bvh.cpp  constant_medium.cpp  hittable_list.cpp  main.cpp  material.cpp  math.cpp  mesh.cpp  model.cpp  pathtracer.cpp  raytracer.cpp  scene.cpp  sphere.cpp  triangle.cpp
src/accel/: bvh.cpp  dynamic_bvh.cpp
src/bxdf/: bxdf.cpp  conductor_bxdf.cpp  conductor_multi_scattering_bxdf .cpp  conductor_multi_scattering_bxdf.cpp  dielectric_bxdf.cpp  dielectric_multi_scattering_bxdf.cpp  diffuse_bxdf.cpp  eon_bxdf.cpp  lambertian_bxdf.cpp  layered_bxdf.cpp  leyered_bxdf.cpp  metallic_roughness_bxdf.cpp  microfacet.cpp  normalized_fresnel_bxdf.cpp  principled_bxdf.cpp  principled_bxdf2.cpp  sheen_bxdf.cpp  specular_reflection_bxdf.cpp  substrate_bxdf.cpp  thin_dielectric_bxdf.cpp  unreal_bxdf.cpp
src/bxdf/bssrdf/: bssrdf.cpp  disney_bssrdf.cpp  gaussian_bssrdf.cpp  random_walk_bssrdf.cpp
src/camera/: camera.cpp  orthographic_camera.cpp  perspective_camera.cpp  spherical_camera.cpp
src/common/: bvh.cpp  image_texture.cpp  math.cpp  util.cpp
src/core/: aabb.cpp  brdf.cpp  bvh.cpp  camera.cpp  dynamic_bvh.cpp  ggx_pdf.cpp  ggxvndf_pdf.cpp  parallel.cpp  parallel_for.cpp  rgb_spectrum.cpp  scene.cpp  util.cpp
src/geometry/: aabb.cpp  aggregate.cpp  intersection.cpp  mesh.cpp  model.cpp  sphere.cpp  triangle.cpp
src/integrator/: albedo_integrator.cpp  ao_integrator.cpp  bidirectional_path_integrator.cpp  bidirectional_vol_path_integrator.cpp  debug_integrator.cpp  integrator.cpp  light_path_integrator.cpp  light_vol_path_integrator.cpp  naive_path_integrator.cpp  naive_vol_path_integrator.cpp  path_integrator.cpp  pathtracer.cpp  photon_mapping_integrator.cpp  random_walk_integrator.cpp  restir_di_integrator.cpp  restir_pt_integrator.cpp  sppm_integrator.cpp  vcm_integrator.cpp  vol_path_integrator.cpp  vol_photon_mapping_integrator.cpp  vol_sppm_integrator.cpp  whitted.cpp  whitted_style.cpp
src/light/: area_light.cpp  diffuse_area_light.cpp  directional_area_light.cpp  directional_light.cpp  image_infinite_light.cpp  point_light.cpp  spot_area_light.cpp  spot_light.cpp  uniform_infinite_light.cpp
src/light_sampler/: power_light_sampler.cpp  uniform_light_sampler.cpp
src/light_transport/: path.cpp  photon.cpp  transport.cpp  visibility.cpp
src/lights/: area_light.cpp  directional_light.cpp  image_infinite_light.cpp  infinite_area_light.cpp  point_light.cpp  uniform_infinite_light.cpp
src/material/: area_light_material.cpp  cloth_material.cpp  conductor_material.cpp  constant_medium.cpp  dielectric.cpp  dielectric_material.cpp  diffuse_light.cpp  diffuse_light_material.cpp  diffuse_material.cpp  lambertian.cpp  layered_material.cpp  material.cpp  metal.cpp  metallic_roughness_material.cpp  microfacet.cpp  mirror_material.cpp  mix_material.cpp  mixture_material.cpp  pbr_material.cpp  principled_material.cpp  principled_material2.cpp  substrate_material.cpp  subsurface_diffusion_material.cpp  subsurface_material.cpp  subsurface_material_diffusion.cpp  subsurface_material_random_walk.cpp  subsurface_random_walk_material.cpp  thin_dielectric_material.cpp  unreal_material.cpp  unrealish_material.cpp
src/medium/: homogeneous_medium.cpp  media.cpp  medium.cpp  nano_vdb_medium.cpp
src/reconstruction/: box_filter.cpp  film.cpp  filter.cpp  gaussian_filter.cpp  tent_filter.cpp
src/sampler/: independent_sampler.cpp  sampler.cpp  stratified_sampler.cpp
src/scene/: brdf_sampling_test.cpp  bvh_test.cpp  camera_scene.cpp  cornell_box lucy.cpp  cornell_box.cpp  environment_map.cpp  ggxvndf_sampling_test.cpp  mis_test.cpp  normal_mapping_test.cpp  pbr_test.cpp  random_scene.cpp  sponza.cpp  stanford_scene.cpp
src/spectra/: spectral_data.cpp  spectrum.cpp
src/textures/: checker_texture.cpp  color_image_texture.cpp  constant_texture.cpp  float_image_texture.cpp  image_texture.cpp  image_texture_hdr.cpp
src/util/: image.cpp  image3d.cpp  loader.cpp  math.cpp  parallel.cpp  parallel_for.cpp  pdf.cpp  scene_builder.cpp  util.cpp
(+121 files in other folders)
